1.0
    replaced command line arguments -Dgraphhopper.. with -Ddw.graphhopper.. due to #1879, see also #1897
    GraphHopper.init(CmdArgs)->GraphHopper.init(GraphHopperConfig), see #1879
    revert compression of landmark preparation data, see #1749 and #1376
    removed GenericWeighting and DataFlagEncoder as a normal CarFlagEncoder does the job too
    add required EncodedValues like road_class to EncodingManager if not added from user
    removed PathNative,PathBidirRef,Path4CH,EdgeBasedPathCH and moved path extraction code out of Path class, added PathExtractor,BidirPathExtractor(+subclasses for CH) instead, #1730
    conditional turn restrictions now supported, #1683
    added new `curbside` feature, #1697
    moved QueryGraph to new routing.querygraph package
    removed GraphExtension, #1783, renamed TurnCostExtension to TurnCostStorage
    removed `heading`, `pass_through` and `ch.force_heading` parameters for speed mode/CH, #1763

0.13
    removed docker compose file
    PathDetails return null instead of -1 for Infinity by default
    replaced AverageSpeedDetails by DecimalDetails
    moved TagParser into new package: com.graphhopper.routing.util.parsers
    removed FlagEncoderFactory.DEFAULT
    removed forestry and motorroad from RoadClass
    SpatialRule.AccessValue replaced by RoadAccess
    removed EncodedValueLookup.hasEncoder, use hasEncodedValue instead
    removed MappedDecimalEncodedValue: should be replaced with FactoredDecimalEncodedValue
    DataFlagEncoder: it is now required to add EncodedValues before. graph.encoded_values: max_speed,road_class,road_environment,road_access
    instead of EncodingManager.ROUNDABOUT use Roundabout.KEY
    changed output format of result=pointlist and moved it into separate endpoint /spt
    removed TraversalMode.EDGE_BASED_1DIR and TraversalMode.EDGE_BASED_2DIR_UTURN, renamed TraversalMode.EDGE_BASED_2DIR to TraversalMode.EDGE_BASED